--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "dayjs": "^1.10.6",
+    "lodash": "^4.17.21",
+    "@react-navigation/native-stack": "^6.1.0",
+    "react-native-safe-area-context": "^3.3.0",
+    "react-native-screens": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
