--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-scrollable-calendars",
-  "version": "0.1.0",
+  "version": "0.0.5",
   "description": "Calendar component for react-native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -34,7 +34,10 @@
   "keywords": [
     "react-native",
     "ios",
-    "android"
+    "android",
+    "calendar",
+    "week calendar",
+    "calendar scroll"
   ],
   "repository": "https://github.com/nguyenduclong-ict/react-native-scrollable-calendars",
   "author": "Nguyen Duc Long <nguyenduclong.ict@gmail.com> (https://github.com/nguyenduclong-ict)",
@@ -47,8 +50,11 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
+    "dayjs": "^1.10.6",
+    "lodash": "^4.17.21",
     "@commitlint/config-conventional": "^11.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@react-navigation/native": "^6.0.2",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
@@ -62,6 +68,7 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "16.13.1",
+    "react-addons-shallow-compare": "^15.6.3",
     "react-native": "0.63.4",
     "react-native-builder-bob": "^0.18.0",
     "release-it": "^14.2.2",
