--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "esModuleInterop": true,
-    "importsNotUsedAsValues": "error",
     "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
     "jsx": "react",
     "lib": ["esnext"],
     "module": "esnext",
