--- a/example/package.json
+++ b/example/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-scrollable-calendars-example",
   "description": "Example app for react-native-scrollable-calendars",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
