--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-scrollable-calendars-jp",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Calendar component for react-native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -156,5 +156,8 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "moment": "^2.30.1"
   }
 }
